tests/reference/run-continue_compilation_ff_1-45b128d.stderr
semantic error: The shift argument of 'dshiftl' intrinsic must be less than or equal to the bit size of the integer
 --> tests/errors/continue_compilation_ff_1.f:3:30
  |
3 |       print *, dshiftl(1, 2, 34)
  |                              ^^ 

semantic error: The shift argument of 'dshiftl' intrinsic must be non-negative integer
 --> tests/errors/continue_compilation_ff_1.f:4:30
  |
4 |       print *, dshiftl(1, 2, -2)
  |                              ^^ 
